cmake_minimum_required(VERSION 3.1)
project(tetgen)

option(BUILD_EXECUTABLE "Build tetgen executable" ON)
option(BUILD_LIBRARY    "Build libtetgen library" ON)

if(BUILD_LIBRARY)
  add_library(tetgen STATIC tetgen.cxx predicates.cxx)
  target_compile_definitions(tetgen PRIVATE -DTETLIBRARY)
  set_target_properties(tetgen PROPERTIES POSITION_INDEPENDENT_CODE ON)
endif()

if(BUILD_EXECUTABLE)
  add_executable(tetgen_exec tetgen.cxx predicates.cxx)
  set_target_properties(tetgen_exec PROPERTIES OUTPUT_NAME tetgen)
  if(CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
    set_target_properties(tetgen_exec PROPERTIES SUFFIX ".html")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORTED_RUNTIME_METHODS=['callMain'] -sSTACK_SIZE=131072 -s TOTAL_MEMORY=64MB")
  endif()
endif()
